force-app/main/default/objects/Lilly_Account_Team__c/Lilly_Account_Team__c.object-meta.xml
<CustomObject>
    <label>Account Team</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>