force-app/main/default/objects/Lilly_Account_Team__c/fields/Lilly_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Cell_Phone__c</fullName>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>