force-app/main/default/objects/Lilly_Account_Team__c/fields/Lilly_Colleague__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Colleague__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colleague</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team</relationshipName>
    <type>Lookup</type>
</CustomField>