force-app/main/default/objects/Lilly_Account_Team__c/fields/Lilly_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>