force-app/main/default/objects/Lilly_Account_Team__c/fields/Lilly_Med_Info_Case__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Med_Info_Case__c</fullName>
    <label>Med Info Case</label>
    <length>16</length>
    <type>Text</type>
</CustomField>