force-app/main/default/objects/Lilly_Account_Team__c/fields/Lilly_Role__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role__c</fullName>
    <label>Role</label>
    <length>35</length>
    <type>Text</type>
</CustomField>