force-app/main/default/objects/Lilly_Account_Team__c/fields/Lilly_Team__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Care</fullName>
            </value>
            <value>
                <fullName>Key Account Management</fullName>
            </value>
            <value>
                <fullName>Medical Science Liason</fullName>
            </value>
            <value>
                <fullName>Reimbursement Access Manager</fullName>
            </value>
            <value>
                <fullName>Diagnostic Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>