force-app/main/default/objects/Lilly_Account_Team__c/fields/Lilly_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Work_Phone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>